[gd_scene load_steps=2 format=3 uid="uid://ctoap6e1xmr6y"]

[ext_resource type="Script" path="res://MenuLAN.gd" id="1_2suav"]

[node name="LAN" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2suav")

[node name="ListaJogadores" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -212.0
offset_right = 131.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Criar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -74.0
offset_right = 308.0
offset_bottom = -24.0
grow_vertical = 0
text = "Criar servidor"

[node name="Conectar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -74.0
offset_right = 131.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
text = "Entrar Servidor"

[node name="Comecar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -311.0
offset_top = -74.0
offset_right = -38.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Come√ßar jogo"

[node name="IpEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -208.0
offset_right = -38.0
offset_bottom = -167.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "127.0.0.1"

[node name="NomeEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -140.0
offset_right = -38.0
offset_bottom = -99.0
grow_horizontal = 0
grow_vertical = 2
text = "Jogador"
placeholder_text = "Jogador"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 116.0
offset_right = 841.0
offset_bottom = 157.0
text = "IP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
offset_left = 707.0
offset_top = 184.0
offset_right = 841.0
offset_bottom = 225.0
text = "Nome"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Criar" to="." method="_on_criar_pressed"]
[connection signal="pressed" from="Conectar" to="." method="_on_conectar_pressed"]
